# cadenza

./: .gitattributes  .gitignore  .travis.yml  LICENSE.txt  Makefile  NBE.hs  README.md  TODO.md  benckmarks.md  build.gradle.kts  build.sbt  gradle.properties  gradlew  main.za  module.md  settings.gradle.kts
asm/main/: asm.kt  class.kt  instructions.kt  modifiers.kt  mods.kt  types.kt
asm/test/: guards.kt  hello.kt  hello_world.kt  util.kt
bench/: add_bench.kt  bench.kt
cadenza/: index-outline.html  index.html  package-list
cadenza/alltypes/: index.html
cadenza/cadenza.asm/: -slot.html  aaload.html  aastore.html  abstract.html  aconst_null.html  add.html  anewarray.html  areturn.html  arraylength.html  athrow.html  baload.html  bastore.html  bipush.html  boolean.html  byte.html  caload.html  castore.html  char.html  checkcast.html  class-node.html  class.html  d2f.html  d2i.html  d2l.html  dadd.html  daload.html  dastore.html  data.html  dcmpg.html  dcmpl.html  dconst_0.html  dconst_1.html  ddiv.html  dmul.html  dneg.html  double.html  drem.html  dsub.html  (+133 more)
component/: build.gradle.kts  native-image.properties
etc/: index.html  module.md  native-image.properties  permissions  symlinks
examples/: add.za  collatz.za  fib.za  fibRec.za
gradle/: gradle.properties
gradle-plugins/: build.gradle.kts  gradle.properties
hs2stg/: Example.hs  Main.hs  hs2stg.cabal
language/: README.md  build.gradle.kts
launcher/: build.gradle.kts
project/: plugins.sbt
src/: code.kt  diagnostics.kt  parser.kt  pretty.kt  types.kt
test/: examples.kt  parser.kt  util.kt
(+2332 files in other folders)
